# ansible-roles

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.adoc  README.adoc  README.adoc.jinja2  all-repos-in.json  all-repos.example.json  ansible-roles.py  ansible_roles.py  index.html  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg
.github/: labels.json  labels.yml  renovate.json5
.github/workflows/: codeql.yml  gh-pages.yml  issue-label-manager.yml
all-repos/: cruft.bash
all-repos-scripts/: cruft  secrets
ansible_roles/: ansible_roles.py  utils.py
ansible_roles_scripts/: cruft.py  merge_bot_pull_requests.py  regenerate.py  script_utils.py  sync_meta.py
graphs/: dependencies_ALL.dot  dependencies_apache2.dot  dependencies_bootstrap.dot  dependencies_checkmk_agent.dot  dependencies_checkmk_server.dot  dependencies_core_dependencies.dot  dependencies_gitlab.dot  dependencies_goaccess.dot  dependencies_mediawiki.dot  dependencies_motd.dot  dependencies_openssh.dot  dependencies_openssl.dot  dependencies_pip.dot  dependencies_shellcheck.dot
templates/: README.adoc.jinja2  dependencies_ALL.dot.jinja2  dependencies_single.dot.jinja2
