[metadata]
name = ansible_roles
version = 1.0.0
long_description = file: README.adoc
long_description_content_type = text/plain
url = https://github.com/JonasPammer/ansible-roles
author = Jonas Pammer
author_email = opensource@jonaspammer.at
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Typing :: Typed

[options]
py_modules = find:
install_requires =
    PyGitHub>=1,<2
    attrs>=21.0,<22
    diskcache>=5,<6
    jinja2>=3,<4
    pyyaml
    rich>=12,<13
    types-PyYAML
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    ansible-roles = ansible_roles.ansible_roles:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[isort]
profile = black

[flake8]
max-line-length = 88
per-file-ignores =
    tests/*.py: S101, WPS226, WPS432
